--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "A communications officer for RESTful apis",
     "require": {
         "php": ">=5.5",
-        "guzzlehttp/guzzle": "^6.1",
-        "symfony/psr-http-message-bridge": "0.2"
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
